# tvmgr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tvmgr
src/tvmgr/: __init__.py  cli.py  discover.py  tv_manager.py
