[project]
name = "tvmgr"
version = "0.1.0"
description = "Manage tv shows"
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "pysmbc>=1.0.25.1",
    "requests>=2.32.5",
]

[project.scripts]
tvmgr = "tvmgr:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
